# FTL

./: .flake8  .gitlab-ci.yml  .gitmodules  DirBend.py  FTLPreferencesDialog.py  FTLWorker.py  FileParser.py  LTest_hook.json  LTest_hook_board.stl  LTest_hook_trace.stl  LinearTransformation.py  MatrixTransformer.py  MeshLayer.py  README.md  RenderContainer.py  Spiral.py  Transformation.py  ZBend.py  _template_.json  bendTest2.py  create_test_data.py  form.ui  kicad2STL.py  mainwindow.py  preferences.ui  pyproject.toml  render_file.py  requirements.txt  sliceTest.py  tox.ini
FTL/: FileParser.py  LayerContainer.py  MainWindow.py  MatrixTransformer.py  MeshLayer.py  MeshSlicer.py  RenderContainer.py  __init__.py  __main__.py  render_file.py
FTL/Transformations/: DirBend.py  DirBendNew.py  LinearTransformation.py  Spiral.py  Transformation.py  ZBend.py  __init__.py
FTL/UI/: FTLPreferencesDialog.py
FTL/Util/: fcad_pcb_export.FCMacro  kicad2STL.py  logging.py
FTL/core/: ABCGeometry.py  FPC.py  FTLGeometry.py  GMSHGeometry.py  Geometry.py  Geometry_GMSH.py  PolygonNester.py
FTL/parse/: DXFParser.py  FTL_Demo.kicad_pcb  (+11 more)
FTLKiCAD/: KiCADPathManager.py  __init__.py
data/: preferences.json
dialogs/: FTLPreferencesDialog.py
old_tests/: create_transformation_testfiles.py  test_fileparser.py  test_transformations.py
testfiles/: LTest_hook._Copper.stl
tests/: create_transformation_testfiles.py  test.kicad_pcb  test_fileparser.py  test_kicadpathmanager - Kopie.py  test_kicadpathmanager.py  test_meshslicer.py  test_transformations - Kopie.py  test_transformations.py
(+34 files in other folders)
